Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12709

mariabackup mtr tests don't handle properly option --mysqld='--innodb_data_file_path...'

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.23
    • 10.1.25
    • Tests, MTR
    • None
    • 10.1.24

    Description

      It is not possible to test custom values of innodb_data_file_path for mariabackup in current mtr , e.g. if I start:

      ./mtr full_backup -mysqld='-innodb_data_file_path=ibdata1:10M;ibdata2:10M:autoextend'

      the test failure is caused by incorrect option detected by mariabackup:

      CURRENT_TEST: mariabackup.full_backup
      mysqltest: At line 7: exec of '/home/a/test1/mariadb-environs/_depot/m-tar/10.1.23/bin/mariabackup --defaults-file=/home/a/test1/mariadb-environs/_depot/m-tar/10.1.23/mysql-test/var/my.cnf --backup --target-dir=/home/a/test1/mariadb-environs/_depot/m-tar/10.1.23/mysql-test/var/tmp/backup 2>&1' failed, error: 256, status: 1, errno: 0
      Output from before failure:
      170506 08:32:26 Connecting to MySQL server host: localhost, user: root, password: set, port: 16000, socket: /home/a/test1/mariadb-environs/_depot/m-tar/10.1.23/mysql-test/var/tmp/mysqld.1.sock
      Using server version 10.1.23-MariaDB
      /home/a/test1/mariadb-environs/_depot/m-tar/10.1.23/bin/mariabackup based on MariaDB server 10.1.23-MariaDB Linux (x86_64) 
      xtrabackup: uses posix_fadvise().
      xtrabackup: cd to /home/a/test1/mariadb-environs/_depot/m-tar/10.1.23/mysql-test/var/mysqld.1/data/
      xtrabackup: open files limit requested 1024, set to 1024
      xtrabackup: using the following InnoDB configuration:
      xtrabackup:   innodb_data_home_dir = ./
      xtrabackup:   innodb_data_file_path = ibdata1:12M:autoextend
      xtrabackup:   innodb_log_group_home_dir = ./
      xtrabackup:   innodb_log_files_in_group = 2
      xtrabackup:   innodb_log_file_size = 5242880
      170506 08:32:26 >> log scanned up to (1632961)
      InnoDB: auto-extending data file ./ibdata1 is of a different size 640 pages (rounded down to MB) than specified in the .cnf file: initial 768 pages, max 0 (relevant if non-zero) pages!
      xtrabackup: Could not open or create data files.
      xtrabackup: If you tried to add new data files, and it failed here,
      xtrabackup: you should now edit innodb_data_file_path in my.cnf back
      xtrabackup: to what it was, and remove the new ibdata files InnoDB created
      xtrabackup: in this failed attempt. InnoDB only wrote those files full of
      xtrabackup: zeros, but did not yet use them in any way. But be careful: do not
      xtrabackup: remove old data files which contain your precious data!
      xtrabackup: error: xb_load_tablespaces() failed witherror code 11
      

      So this line is incorrectly detected:
      xtrabackup: innodb_data_file_path = ibdata1:12M:autoextend
      and results in:
      InnoDB: auto-extending data file ./ibdata1 is of a different size 640 pages (rounded down to MB) than specified in the .cnf file: initial 768 pages, max 0 (relevant if non-zero) pages!

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              anikitin Andrii Nikitin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.