MDEV-12709 : mariabackup - during backup phase read some innodb parameter using "show variables", rather than take the value from my.cnf.

"show variables" is more accurate than my.cnf,it also works for parameters
set on the mysqld command line, which is especially important for MTR.